Disable omitting frame pointer to aid with debugging

--- a/erts/lib_src/Makefile.in
+++ b/erts/lib_src/Makefile.in
@@ -21,7 +21,7 @@ include $(ERL_TOP)/make/output.mk
 include $(ERL_TOP)/make/target.mk
 include ../include/internal/$(TARGET)/ethread.mk
 
-OMIT_OMIT_FP=no
+OMIT_OMIT_FP=yes
 
 
 CC=@CC@
